--- a/README
+++ b/README
@@ -1,13 +1,53 @@
+Cub3D - Raycasting FPS Game
 
-Mandatory part:
-	- No wall colosion
-	- Only color for sky and floor
+🚀 Overview
+Cub3D is a Wolfenstein 3D-inspired game that utilizes raycasting to create a pseudo-3D environment. 
+The game features map exploration, sprite interactions, and an interactive minimap.
 
-Bonus part:
-	- Texture for SKY with sky feeling renderin -> in .cub file expm file for sky rendering should have "SK" identifier
-	- Texture for Ceiling with ceiling feeling renderin -> in .cub file expm file for ceiling rendering should have "C" identifier
-	- Texture for Floor
-	- Weapon with shooting small visual working with left control tht can cause damaze to Sprites
-	- 2D Sprties that can move toward player and cause health damage to player
-	- Print of player total heath at lower left side of screen.
+🛠️ Mandatory Features
+		✅ Basic Rendering
+		Raycasting-based 3D environment.
+		Wall rendering without collision detection.
+		Flat colors for the sky and floor (no textures).
 
+		✅ Player Movement
+		Free movement within the map.
+		Basic rotation and directional movement.
+
+		✅ Map System
+		.cub map file format defines the layout.
+
+✨ Bonus Features
+	🔹 Enhanced
+		* Skybox texture for a realistic sky rendering ("SK" identifier in .cub file).
+		* Ceiling texture for immersive indoor environments ("C" identifier in .cub file).
+		* Textured floors for better aesthetics.
+		* Minimap for better bavigation.
+		* Rotating with mouse.
+		* Sliding doors.
+
+	🔹 Combat & Enemies
+		* Weapon system
+		* Left Control key to shoot.
+		* Bullets deal damage to sprites.
+		* Enemy AI (Sprites)
+		* 2D moving sprites that chase the player.
+		* Enemies cause health damage upon contact.
+
+	🔹 Game HUD & Objective
+		* Player health displayed at the lower-left corner of the screen.
+		* Player ammo displayed at the lower-left corner of the screen.
+
+	🔹 Objective:
+		* Find the key 🔑.
+		* Unlock the final purple door 🚪.
+
+🎮 Controls
+Action			Key
+Move Forward	W
+Move Backward	S
+Turn Left		A
+Turn Right		D
+Shoot			Left Control
+Door open/close Space
+Exit Game		ESC
