--- a/README
+++ b/README
@@ -52,7 +52,7 @@ Shoot			Left Control
 Door open/close 	Space
 Exit Game		ESC
 
-![Logo](assets/start.png)
+![start_page](program/assets/start.png)
 --------------------------------------------------------------------------------------
 
 To run the program on Linux:
