--- a/README
+++ b/README
@@ -52,7 +52,7 @@ Shoot			Left Control
 Door open/close 	Space
 Exit Game		ESC
 
-![start_page](program/assets/start.png?raw=true)
+![start_page](https://github.com/ma6di/Cub3D/blob/main/program/assets/start.png)
 --------------------------------------------------------------------------------------
 
 To run the program on Linux:
