--- a/README
+++ b/README
@@ -52,7 +52,7 @@ Shoot			Left Control
 Door open/close 	Space
 Exit Game		ESC
 
-<img width="999" alt="Image" src="https://github.com/user-attachments/assets/d38e4e95-84a7-4def-b441-d51c0f0ae9fc" />
+![start_page](https://github.com/user-attachments/assets/d38e4e95-84a7-4def-b441-d51c0f0ae9fc)
 --------------------------------------------------------------------------------------
 
 To run the program on Linux:
