--- a/README
+++ b/README
@@ -61,7 +61,7 @@ Shoot			Left Control
 Door open/close 	Space
 Exit Game		ESC
 
-![start_page](https://github.com/user-attachments/assets/d38e4e95-84a7-4def-b441-d51c0f0ae9fc)
+![start_page](program/assets/start.png)
 --------------------------------------------------------------------------------------
 
 To run the program on Linux:
